--- a/src/AppBundle/Resources/views/polls/answer.html.twig
+++ b/src/AppBundle/Resources/views/polls/answer.html.twig
@@ -41,8 +41,8 @@
                             <div class="row">
                                 <div class="responsive-linear-scale">
                                     {% for choice in choices %}
-                                        <div class="kdt-{% if multiple %}checkbox{% else %}radio{% endif %}">
-                                            <input type="{% if multiple %}checkbox{% else %}radio{% endif %}" id="{{ id ~ '_' ~ choice.data }}" {{ block('widget_attributes') }}{% if choice.value is defined %} value="{{ choice.value }}"{% endif %}>
+                                        <div class="kdt-radio">
+                                            <input type="radio" id="{{ id ~ '_' ~ choice.data }}" {{ block('widget_attributes') }}{% if choice.value is defined %} value="{{ choice.value }}"{% endif %}>
                                             <label for="{{ id ~ '_' ~ choice.data }}">{{ choice.label }}</label>
                                         </div>
                                     {% endfor %}
