--- a/src/AppBundle/Resources/views/backoffice/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/index.html.twig
@@ -4,6 +4,7 @@
 {% block main %}
         <div class="animated fadeIn">
             <div class="row">
+                {% if is_granted('ROLE_ADMIN') %}
                 <div class="col-sm-6 col-lg-3">
                     <div class="card card-inverse card-primary">
                         <div class="card-block pb-0">
@@ -15,6 +16,7 @@
                         </div>
                     </div>
                 </div>
+                {% endif %}
                 <!--/.col-->
 
                 <div class="col-sm-6 col-lg-3">
