--- a/app/Resources/FOSUserBundle/views/Profile/show.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show.html.twig
@@ -1,5 +1,7 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
+{% block title %}Aperçu du profil{% endblock %}
+
 {% block fos_user_content %}
 {% include "FOSUserBundle::Profile/show_content.html.twig" %}
 {% endblock fos_user_content %}
