--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -1,6 +1,23 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
+<h1 class="text-center">Aperçu du profil</h1>
+<hr>
+
 <div class="fos_user_user_show">
-    <p>{{ 'profile.show.username'|trans }}: {{ user.username }}</p>
-    <p>{{ 'profile.show.email'|trans }}: {{ user.email }}</p>
+    <p><b>{{ 'profile.show.username'|trans }}</b> : {{ user.username }}</p>
+    <p><b>{{ 'profile.show.email'|trans }}</b> : {{ user.email }}</p>
+    <p><b>{{ 'form.last_name'|trans }}</b> : {{ user.lastName }}</p>
+    <p><b>{{ 'form.first_name'|trans }}</b> : {{ user.firstName }}</p>
+
+    <a href="{{ path('fos_user_profile_edit') }}" class="btn btn-primary">
+        {{ 'update_profile' | trans }}
+    </a>
+
+    <a href="{{ path('fos_user_change_password') }}" class="btn btn-primary">
+        {{ 'update_password' | trans }}
+    </a>
+
+    <a href="#" class="btn btn-danger" onclick="alert('CNIL / suppression de compte ... en cours !')">
+        Supprimer mon compte
+    </a>
 </div>
