--- a/src/AppBundle/Resources/views/backoffice/partial/_header.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/partial/_header.html.twig
@@ -15,13 +15,9 @@
                 {{ app.user.username }}
             </a>
             <div class="dropdown-menu dropdown-menu-right">
-                <a href="{{ path('fos_user_profile_edit') }}" class="dropdown-item">
+                <a href="{{ path('fos_user_profile_show') }}" class="dropdown-item">
                     <i class="fa fa-user"></i>
-                    {{ 'update_profile' | trans }}
-                </a>
-                <a href="{{ path('fos_user_change_password') }}" class="dropdown-item">
-                    <i class="fa fa-user"></i>
-                    {{ 'update_password' | trans }}
+                    {{ 'profile.show' | trans }}
                 </a>
                 <a href="{{ path('fos_user_security_logout') }}" class="dropdown-item">
                     <i class="fa fa-sign-out"></i>
