--- a/web/front/assets/css/style.css
+++ b/web/front/assets/css/style.css
@@ -79,7 +79,7 @@ footer {
     background-color: #fff;
     margin-top: 50px;
     position: absolute;
-    height:150px;
+    height: 150px;
     bottom: 0;
 }
 
@@ -92,115 +92,7 @@ footer {
     font-family: 'Raleway-Light';
 }
 
-/* Custom checkbox style */
-
-/*
-[type="checkbox"]:not(:checked),
-[type="checkbox"]:checked,
-[type="radio"]:not(:checked),
-[type="radio"]:checked {
-  position: absolute;
-  left: -9999px;
-}
-[type="checkbox"]:not(:checked) + label,
-[type="checkbox"]:checked + label,
-[type="radio"]:not(:checked) + label,
-[type="radio"]:checked + label {
-  position: relative;
-  padding-left: 1.95em;
-  cursor: pointer;
-}
-
-
-[type="checkbox"]:not(:checked) + label:before,
-[type="checkbox"]:checked + label:before,
-[type="radio"]:not(:checked) + label:before,
-[type="radio"]:checked + label:before {
-  content: '';
-  position: absolute;
-  left: 0; top: 0;
-  width: 1.25em; height: 1.25em;
-  border: 2px solid #ccc;
-  background: #fff;
-  box-shadow: inset 0 1px 3px rgba(0,0,0,.1);
-}
-
-[type="checkbox"]:not(:checked) + label:after,
-[type="checkbox"]:checked + label:after {
-  content: '✔';
-  position: absolute;
-  top: .1em; left: .09em;
-  font-size: 1.3em;
-  line-height: 0.8;
-  color: #20a8d8;
-  transition: all .2s;
-}
-
-[type="checkbox"]:not(:checked) + label:after,
-[type="radio"]:not(:checked) + label:after {
-  opacity: 0;
-  transform: scale(0);
-}
-[type="checkbox"]:checked + label:after,
-[type="radio"]:checked + label:after {
-  opacity: 1;
-  transform: scale(1);
-}
-
-[type="checkbox"]:disabled:not(:checked) + label:before,
-[type="checkbox"]:disabled:checked + label:before,
-[type="radio"]:disabled:not(:checked) + label:before,
-[type="radio"]:disabled:checked + label:before {
-  box-shadow: none;
-  border-color: #bbb;
-  background-color: #ddd;
-}
-[type="checkbox"]:disabled:checked + label:after,
-[type="radio"]:disabled:checked + label:after {
-  color: #999;
-}
-[type="checkbox"]:disabled + label,
-[type="radio"]:disabled + label {
-  color: #aaa;
-}
-
-[type="checkbox"]:checked:focus + label:before,
-[type="checkbox"]:not(:checked):focus + label:before,
-[type="radio"]:checked:focus + label:before,
-[type="radio"]:not(:checked):focus + label:before {
-  border: 2px solid #ccc;
-}
-label:hover:before {
-  border: 2px solid #afafaf!important;
-}
-*/
-
-/* Custom radio style */
-
-/*
-[type="radio"]:not(:checked) + label:before,
-[type="radio"]:checked + label:before {
-  border-radius: 50%;
-}
-
-[type="radio"]:not(:checked) + label:after,
-[type="radio"]:checked + label:after {
-  content: '•';
-  position: absolute;
-  top: -.18em; left: .1em;
-  font-size: 2em;
-  line-height: 0.8;
-  color: #20a8d8;
-  transition: all .2s;
-}
-
-*/
-
-/* TODO: Hugo a dit "tkt je le ferais" (input en dessous des labels) */
-/*[type="radio"] + label:before, [type="radio"] + label:after {
-    transform: translate(50%, 100%);
-    margin-top: .5em;
-}*/
+/*--- Input radio/checkbox personnalisés ---*/
 
 .kdt-radio {
     text-align: center;
@@ -219,6 +111,7 @@ label:hover:before {
 .kdt-radio [type="radio"] ~ label {
     padding-top: 26px;
 }
+
 .kdt-checkbox [type="checkbox"] ~ label {
     padding-left: 26px;
 }
@@ -253,7 +146,7 @@ label:hover:before {
     height: 0;
     width: 0;
     top: 10px;
-    left: 5px;
+    left: 6px;
     transition: all .1s linear;
 }
 
@@ -265,7 +158,7 @@ label:hover:before {
 .kdt-radio [type="radio"]:checked ~ label::after,
 .kdt-checkbox [type="checkbox"]:checked ~ label::after {
     top: 5px;
-    background-color:  #20a8d8;
+    background-color: #20a8d8;
     height: 10px;
     width: 10px;
 }
@@ -284,6 +177,7 @@ label:hover:before {
 .kdt-radio-aside [type="radio"] ~ label::after {
     left: 0;
 }
+
 .kdt-radio-aside [type="radio"] ~ label {
     padding-top: 0;
     padding-left: 15px;
