--- a/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
@@ -163,39 +163,57 @@
                                 <button id="copy" class="btn btn-secondary" type="button">
                                     <i class="fa fa-clipboard" aria-hidden="true"></i>
                               </span>
-
                     </div>
 
                 </div>
                 <hr class="divider">
-                <div class="col-md-12">
+                <div class="col-md-12" id="mail-input-group">
                     Envoyer ce sondage à une adresse e-mail :
                     <div class="input-group">
-                        <input class="form-control" placeholder="Saisissez une adresse e-mail" type="email"
-                               name="user_email" id="user_email">
-                        <input class="hidden-xs-up" type="number" name="poll_id" readonly="readonly" id="poll_id">
-                        <span class="input-group-btn">
+
+                    </div>
+                    <hr class="divider">
+                    <div class="col-md-12">
+                        Envoyer ce sondage à une adresse e-mail :
+                        <div class="input-group">
+                            <input class="form-control" placeholder="Saisissez une adresse e-mail" type="email"
+                                   name="user_email" id="user_email">
+                            <input class="hidden-xs-up" type="number" name="poll_id" readonly="readonly" id="poll_id">
+                            <span class="input-group-btn">
                                 <button class="btn btn-info" id="send-mail"
                                         data-post="{{ path('backoffice_send_mail') }}" type="button"><i
                                             class="fa fa-envelope-o"
                                             aria-hidden="true"></i>&nbsp;Envoyer</button>
                             </span>
+                        </div>
                     </div>
-                    <div class="col-md-12 mt-1" id="mail_errors">
+                    <div class="col-md-12 card card-success state" id="mail-share-success">
+                        <div class="card-body">
+                            <i class="fa fa-check fa-5x"></i>
+                            <p>Votre sondage a bien été envoyé</p>
+                        </div>
+                    </div>
+                    <div class="col-md-12 mt-1 state" id="mail_errors">
                         Une erreur est survenue ,verifiez que l'adresse e-mail et valide. Si l'erreur persiste contactez
                         votre administrateur.
                     </div>
+
                 </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+                <div class="col-md-12 mt-1" id="mail_errors">
+                    Une erreur est survenue ,verifiez que l'adresse e-mail et valide. Si l'erreur persiste contactez
+                    votre administrateur.
                 </div>
             </div>
-        </div>
-        <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+            </div>
         </div>
     </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Fermer</button>
+    </div>
 </div>
+
 
 
 {% endblock %}
